<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.activity.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/artist_recylerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="Not Found Try For Another Artist"
        android:layout_centerInParent="true"/>
</RelativeLayout>
